# Hackathon_Todo_All_Phases

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.claude/: settings.local.json
phase-I-todo-in-memory-console-app/: CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  test_parser.py
phase-I-todo-in-memory-console-app/specs/: plan.md  plan_analysis_report.md  spec_analysis_report.md  tasks_analysis_report.md
phase-I-todo-in-memory-console-app/src/: __init__.py  config.py  main.py
phase-I-todo-in-memory-console-app/src/cli_todo_app/: logging_infrastructure.py  main.py
phase-I-todo-in-memory-console-app/src/command_history/: __init__.py  command_history.py
phase-I-todo-in-memory-console-app/src/domain/: entities.py  events.py  status.py
phase-I-todo-in-memory-console-app/src/error_handling/: error_handler.py
phase-I-todo-in-memory-console-app/src/events/: __init__.py  event_bus.py  event_store.py  replay.py
phase-I-todo-in-memory-console-app/src/exit_summary/: exit_summary.py
phase-I-todo-in-memory-console-app/src/interaction_modes/: __init__.py  interaction_modes.py
phase-I-todo-in-memory-console-app/src/macro_engine/: macro_engine.py
phase-I-todo-in-memory-console-app/src/metadata_injection/: __init__.py
phase-I-todo-in-memory-console-app/src/middleware/: __init__.py  analytics_middleware.py  input_normalizer.py  intent_classifier.py  pipeline.py  renderer_middleware.py  security_guard.py  validation_middleware.py
phase-I-todo-in-memory-console-app/src/parsers/: command_parser.py
specs/phase-1/: plan.md  (+4 more)
(+703 files in other folders)
