[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-todo-app"
version = "0.1.0"
description = "Phase I In-Memory Python CLI Todo Application"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Development Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.scripts]
cli-todo = "cli_todo_app.main:main"
